finiquitao 2 + fomato nuevo + cambiado 1 a formato nuevo

--- a/Dia01/CMakeLists.txt
+++ b/Dia01/CMakeLists.txt
@@ -1,11 +1,5 @@
-add_executable(Dia1A Dia1A.cpp)
+add_executable(Dia1 Dia1.cpp)
 target_link_libraries(
-    Dia1A
-    aocutils
-)
-
-add_executable(Dia1B Dia1B.cpp)
-target_link_libraries(
-    Dia1B
+    Dia1
     aocutils
 )
