--- a/Dia02/CMakeLists.txt
+++ b/Dia02/CMakeLists.txt
@@ -1,11 +1,5 @@
-add_executable(Dia2A Dia2A.cpp)
+add_executable(Dia2 Dia2.cpp)
 target_link_libraries(
-    Dia2A
-    aocutils
-)
-
-add_executable(Dia2B Dia2B.cpp)
-target_link_libraries(
-    Dia2B
+    Dia2
     aocutils
 )
