arreglado cosas de cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,16 +29,17 @@ add_subdirectory(Dia09)
 add_subdirectory(Dia10)
 add_subdirectory(Dia11)
 add_subdirectory(Dia12)
-add_subdirectory(Dia13)
-add_subdirectory(Dia14)
-add_subdirectory(Dia15)
-add_subdirectory(Dia16)
-add_subdirectory(Dia17)
-add_subdirectory(Dia18)
-add_subdirectory(Dia19)
-add_subdirectory(Dia20)
-add_subdirectory(Dia21)
-add_subdirectory(Dia22)
-add_subdirectory(Dia23)
-add_subdirectory(Dia24)
-add_subdirectory(Dia25)
+
+# add_subdirectory(Dia13)
+# add_subdirectory(Dia14)
+# add_subdirectory(Dia15)
+# add_subdirectory(Dia16)
+# add_subdirectory(Dia17)
+# add_subdirectory(Dia18)
+# add_subdirectory(Dia19)
+# add_subdirectory(Dia20)
+# add_subdirectory(Dia21)
+# add_subdirectory(Dia22)
+# add_subdirectory(Dia23)
+# add_subdirectory(Dia24)
+# add_subdirectory(Dia25)
